Update Blazor WASM app

--- a/src/Assistant.BlazorWasmApp/_Imports.razor
+++ b/src/Assistant.BlazorWasmApp/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 
 @using ApimAIAssistant.BlazorWasmApp
+@using ApimAIAssistant.BlazorWasmApp.Facades
 @using ApimAIAssistant.BlazorWasmApp.Shared
