--- a/src/Assistant.BlazorWasmApp/_Imports.razor
+++ b/src/Assistant.BlazorWasmApp/_Imports.razor
@@ -9,4 +9,4 @@
 
 @using ApimAIAssistant.BlazorWasmApp
 @using ApimAIAssistant.BlazorWasmApp.Shared
-@using ApimAIAssistant.Facades.SwaFacade
+@using ApimAIAssistant.Components
