--- a/src/Assistant.BlazorWasmApp/Shared/MainLayout.razor
+++ b/src/Assistant.BlazorWasmApp/Shared/MainLayout.razor
@@ -1,13 +1,9 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <h1>APIM Policy Assistant</h1>
         </div>
 
         <article class="content px-4">
