--- a/src/Assistant.WebApp.BlazorWasm/_Imports.razor
+++ b/src/Assistant.WebApp.BlazorWasm/_Imports.razor
@@ -7,6 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
-@using ApimAIAssistant.BlazorWasmApp
-@using ApimAIAssistant.BlazorWasmApp.Shared
-@using ApimAIAssistant.Components
+@using ApimPolicyAssistant.WebApp.BlazorWasm
+@using ApimPolicyAssistant.WebApp.BlazorWasm.Shared
+@using ApimPolicyAssistant.WebApp.Components
