Add Blazor server app

--- a/src/Assistant.WebApp.Components/_Imports.razor
+++ b/src/Assistant.WebApp.Components/_Imports.razor
@@ -1,3 +1,3 @@
 @using Microsoft.AspNetCore.Components.Web
 
-@using ApimPolicyAssistant.Services.SwaFacade
+@using ApimPolicyAssistant.Services.Abstractions
