--- a/src/Assistant.WebApp.Components/AssistantComponent.razor
+++ b/src/Assistant.WebApp.Components/AssistantComponent.razor
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="mb-3">
             <label for="prompt" class="form-label"><strong>Prompt</strong></label>
-            <textarea class="form-control" id="prompt" rows="10" placeholder="Add prompt here">@Prompt</textarea>
+            <textarea class="form-control" id="prompt" rows="10" placeholder="Add prompt here" @bind="Prompt"></textarea>
         </div>
     </div>
 
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="mb-3">
             <label for="prompt" class="form-label"><strong>Completion</strong></label>
-            <textarea class="form-control" id="prompt" rows="10" readonly>@Completion</textarea>
+            <textarea class="form-control" id="prompt" rows="10" placeholder="Result will show here" readonly>@Completion</textarea>
         </div>
     </div>
 
